exports[`CssFormatter > formats @font-face at-rule without name toJSON 1`] = `
{
  "element": {
    "uid": "elem-at-2",
    "selector": "button"
  },
  "rules": [
    {
      "type": "at-rule",
      "atRuleType": "font-face",
      "selector": "@font-face",
      "source": "<style>",
      "properties": [
        {
          "name": "font-family",
          "value": "Open Sans",
          "status": "active"
        },
        {
          "name": "src",
          "value": "url(font.woff2)",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats @font-face at-rule without name toString 1`] = `
Styles for button (uid: "elem-at-2"):

  @font-face (<style>) {
    font-family: Open Sans;
    src: url(font.woff2);
  }
`;

exports[`CssFormatter > formats @font-palette-values at-rule with name toJSON 1`] = `
{
  "element": {
    "uid": "elem-at-1",
    "selector": "button"
  },
  "rules": [
    {
      "type": "at-rule",
      "atRuleType": "font-palette-values",
      "name": "--my-palette",
      "selector": "@font-palette-values --my-palette",
      "source": "fonts.css:11",
      "properties": [
        {
          "name": "font-family",
          "value": "Bixa",
          "status": "active"
        },
        {
          "name": "base-palette",
          "value": "3",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats @font-palette-values at-rule with name toString 1`] = `
Styles for button (uid: "elem-at-1"):

  @font-palette-values --my-palette (fonts.css:11) {
    font-family: Bixa;
    base-palette: 3;
  }
`;

exports[`CssFormatter > formats @function custom function rule with parameters and declarations toJSON 1`] = `
{
  "element": {
    "uid": "elem-func",
    "selector": "button"
  },
  "rules": [
    {
      "type": "function",
      "name": "--double",
      "selector": "@function --double(--x)",
      "source": "math.css:5",
      "properties": [
        {
          "name": "result",
          "value": "calc(var(--x) * 2)",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats @function custom function rule with parameters and declarations toString 1`] = `
Styles for button (uid: "elem-func"):

  @function --double(--x) (math.css:5) {
    result: calc(var(--x) * 2);
  }
`;

exports[`CssFormatter > formats @keyframes rule with multiple steps and source location toJSON 1`] = `
{
  "element": {
    "uid": "elem-kf",
    "selector": "button"
  },
  "rules": [
    {
      "type": "keyframes",
      "name": "slideIn",
      "selector": "@keyframes slideIn",
      "source": "animations.css:11",
      "keyframes": [
        {
          "keyText": "from",
          "source": "animations.css:11",
          "properties": [
            {
              "name": "opacity",
              "value": "0",
              "status": "active"
            }
          ]
        },
        {
          "keyText": "to",
          "source": "animations.css:14",
          "properties": [
            {
              "name": "opacity",
              "value": "1",
              "status": "active"
            }
          ]
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats @keyframes rule with multiple steps and source location toString 1`] = `
Styles for button (uid: "elem-kf"):

  @keyframes slideIn (animations.css:11) {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }
`;

exports[`CssFormatter > formats @layer, @media, @supports, and @starting-style ancestor rules toJSON 1`] = `
{
  "element": {
    "uid": "btn-1",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".test-btn",
      "ancestors": [
        {
          "type": "layer",
          "name": "base"
        },
        {
          "type": "media",
          "query": "(min-width: 500px)"
        },
        {
          "type": "supports",
          "query": "(display: flex)"
        },
        {
          "type": "starting-style"
        }
      ],
      "source": "<style>",
      "properties": [
        {
          "name": "display",
          "value": "flex",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats @layer, @media, @supports, and @starting-style ancestor rules toString 1`] = `
Styles for button (uid: "btn-1"):

  @layer base {
    @media (min-width: 500px) {
      @supports (display: flex) {
        @starting-style {
          .test-btn (<style>) {
            display: flex;
          }
        }
      }
    }
  }
`;

exports[`CssFormatter > formats @navigation ancestor rule toJSON 1`] = `
{
  "element": {
    "uid": "elem-nav",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".nav-link",
      "ancestors": [
        {
          "type": "navigation",
          "query": "same-document"
        }
      ],
      "source": "<style>",
      "properties": [
        {
          "name": "color",
          "value": "navy",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats @navigation ancestor rule toString 1`] = `
Styles for button (uid: "elem-nav"):

  @navigation same-document {
    .nav-link (<style>) {
      color: navy;
    }
  }
`;

exports[`CssFormatter > formats @property rules defined in stylesheets and programmatically toJSON 1`] = `
{
  "element": {
    "uid": "elem-prop",
    "selector": "button"
  },
  "rules": [
    {
      "type": "property",
      "name": "--brand-color",
      "selector": "@property --brand-color",
      "source": "theme.css:11",
      "properties": [
        {
          "name": "syntax",
          "value": "\\"<color>\\"",
          "status": "active"
        },
        {
          "name": "inherits",
          "value": "false",
          "status": "active"
        },
        {
          "name": "initial-value",
          "value": "#1a73e8",
          "status": "active"
        }
      ]
    },
    {
      "type": "property",
      "name": "--runtime-var",
      "selector": "@property --runtime-var",
      "source": "CSS.registerProperty",
      "properties": [
        {
          "name": "syntax",
          "value": "\\"<length>\\"",
          "status": "active"
        },
        {
          "name": "inherits",
          "value": "true",
          "status": "active"
        },
        {
          "name": "initial-value",
          "value": "10px",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats @property rules defined in stylesheets and programmatically toString 1`] = `
Styles for button (uid: "elem-prop"):

  @property --brand-color (theme.css:11) {
    syntax: "<color>";
    inherits: false;
    initial-value: #1a73e8;
  }

  @property --runtime-var (CSS.registerProperty) {
    syntax: "<length>";
    inherits: true;
    initial-value: 10px;
  }
`;

exports[`CssFormatter > formats @scope ancestor rule toJSON 1`] = `
{
  "element": {
    "uid": "item-1",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".scoped-item",
      "ancestors": [
        {
          "type": "scope",
          "query": "(:root)"
        }
      ],
      "source": "<style>",
      "properties": [
        {
          "name": "color",
          "value": "blue",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats @scope ancestor rule toString 1`] = `
Styles for button (uid: "item-1"):

  @scope (:root) {
    .scoped-item (<style>) {
      color: blue;
    }
  }
`;

exports[`CssFormatter > formats active and inactive @position-try rules toJSON 1`] = `
{
  "element": {
    "uid": "elem-pos",
    "selector": "button"
  },
  "rules": [
    {
      "type": "position-try",
      "name": "--bottom",
      "active": true,
      "selector": "@position-try --bottom",
      "source": "anchor.css:21",
      "properties": [
        {
          "name": "top",
          "value": "anchor(bottom)",
          "status": "active"
        }
      ]
    },
    {
      "type": "position-try",
      "name": "--top",
      "active": false,
      "selector": "@position-try --top",
      "source": "anchor.css:26",
      "properties": [
        {
          "name": "bottom",
          "value": "anchor(top)",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats active and inactive @position-try rules toString 1`] = `
Styles for button (uid: "elem-pos"):

  @position-try --bottom (anchor.css:21) {
    top: anchor(bottom);
  }

  [inactive] @position-try --top (anchor.css:26) {
    bottom: anchor(top);
  }
`;

exports[`CssFormatter > formats at-rule when present in atRules toJSON 1`] = `
{
  "element": {
    "uid": "elem-at-4",
    "selector": "button"
  },
  "rules": [
    {
      "type": "at-rule",
      "atRuleType": "counter-style",
      "name": "thumbs",
      "selector": "@counter-style thumbs",
      "source": "<style>",
      "properties": [
        {
          "name": "system",
          "value": "cyclic",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats at-rule when present in atRules toString 1`] = `
Styles for button (uid: "elem-at-4"):

  @counter-style thumbs (<style>) {
    system: cyclic;
  }
`;

exports[`CssFormatter > formats constructed stylesheets with and without sourceURL pragma toJSON 1`] = `
{
  "element": {
    "uid": "elem-constructed",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".constructed-btn",
      "source": "constructed stylesheet",
      "properties": [
        {
          "name": "color",
          "value": "purple",
          "status": "active"
        }
      ]
    },
    {
      "type": "matched",
      "selector": ".themed-btn",
      "source": "theme.css:11",
      "properties": [
        {
          "name": "color",
          "value": "orange",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats constructed stylesheets with and without sourceURL pragma toString 1`] = `
Styles for button (uid: "elem-constructed"):

  .constructed-btn (constructed stylesheet) {
    color: purple;
  }

  .themed-btn (theme.css:11) {
    color: orange;
  }
`;

exports[`CssFormatter > formats data: and blob: stylesheet URLs correctly toJSON 1`] = `
{
  "element": {
    "uid": "data-elem",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".data-rule",
      "source": "data-uri",
      "properties": [
        {
          "name": "color",
          "value": "blue",
          "status": "active"
        }
      ]
    },
    {
      "type": "matched",
      "selector": ".blob-rule",
      "source": "blob",
      "properties": [
        {
          "name": "color",
          "value": "green",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats data: and blob: stylesheet URLs correctly toString 1`] = `
Styles for button (uid: "data-elem"):

  .data-rule (data-uri) {
    color: blue;
  }

  .blob-rule (blob) {
    color: green;
  }
`;

exports[`CssFormatter > formats element label with id, class, and uid and no styles toJSON 1`] = `
{
  "element": {
    "uid": "1_1",
    "selector": "div#main"
  },
  "rules": []
}
`;

exports[`CssFormatter > formats element label with id, class, and uid and no styles toString 1`] = `
Styles for div#main (uid: "1_1"):

  (no styles)
`;

exports[`CssFormatter > formats inherited pseudo-elements with ancestor node and resolves uid toJSON 1`] = `
{
  "element": {
    "uid": "para-1",
    "selector": "p.paragraph"
  },
  "rules": [
    {
      "type": "inherited",
      "node": {
        "uid": "cont-10",
        "selector": "div.container"
      },
      "selector": "div.container::selection",
      "source": "theme.css:6",
      "properties": [
        {
          "name": "color",
          "value": "white",
          "status": "active"
        },
        {
          "name": "--selection-var",
          "value": "red",
          "status": "active"
        }
      ]
    },
    {
      "type": "inherited",
      "node": {
        "uid": "cont-10",
        "selector": "div.container"
      },
      "properties": [
        {
          "name": "color",
          "value": "yellow",
          "status": "active"
        },
        {
          "name": "--highlight-color",
          "value": "gold",
          "status": "active"
        }
      ]
    },
    {
      "type": "inherited",
      "node": {
        "uid": "cont-10",
        "selector": "div.container"
      },
      "properties": [
        {
          "name": "color",
          "value": "green",
          "status": "active"
        }
      ]
    },
    {
      "type": "pseudo",
      "pseudoType": "::highlight(search)",
      "node": {
        "uid": "cont-10",
        "selector": "div.container"
      },
      "properties": [
        {
          "name": "color",
          "value": "yellow",
          "status": "active"
        }
      ]
    },
    {
      "type": "pseudo",
      "pseudoType": "::selection",
      "node": {
        "uid": "cont-10",
        "selector": "div.container"
      },
      "selector": "div.container::selection",
      "source": "theme.css:6",
      "properties": [
        {
          "name": "color",
          "value": "white",
          "status": "active"
        },
        {
          "name": "background-color",
          "value": "navy",
          "status": "active"
        }
      ]
    },
    {
      "type": "pseudo",
      "pseudoType": "::marker",
      "properties": [
        {
          "name": "content",
          "value": "\\"•\\"",
          "status": "active"
        }
      ]
    },
    {
      "type": "pseudo",
      "pseudoType": "::marker",
      "node": {
        "uid": "cont-10",
        "selector": "div.container"
      },
      "properties": [
        {
          "name": "color",
          "value": "green",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats inherited pseudo-elements with ancestor node and resolves uid toString 1`] = `
Styles for p.paragraph (uid: "para-1"):

  Inherited from div.container (uid: "cont-10"):
    div.container::selection (theme.css:6) {
      color: white;
      --selection-var: red;
    }

  Inherited from div.container (uid: "cont-10"):
    element.style {
      color: yellow;
      --highlight-color: gold;
    }

  Inherited from div.container (uid: "cont-10"):
    element.style {
      color: green;
    }

  /* Pseudo ::highlight(search) element (inherited from div.container, uid: "cont-10") */
  ::highlight(search) {
    color: yellow;
  }

  /* Pseudo ::selection element (inherited from div.container, uid: "cont-10") */
  div.container::selection (theme.css:6) {
    color: white;
    background-color: navy;
  }

  /* Pseudo ::marker element */
  ::marker {
    content: "•";
  }

  /* Pseudo ::marker element (inherited from div.container, uid: "cont-10") */
  ::marker {
    color: green;
  }
`;

exports[`CssFormatter > formats inherited styles from ancestors and ignores non-inheritable ones toJSON 1`] = `
{
  "element": {
    "uid": "child-1",
    "selector": "button"
  },
  "rules": [
    {
      "type": "inherited",
      "node": {
        "selector": "section#parent-sec"
      },
      "selector": ".parent-style",
      "source": "<style>",
      "properties": [
        {
          "name": "color",
          "value": "black",
          "status": "active"
        },
        {
          "name": "--custom-var",
          "value": "10px",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats inherited styles from ancestors and ignores non-inheritable ones toString 1`] = `
Styles for button (uid: "child-1"):

  Inherited from section#parent-sec:
    .parent-style (<style>) {
      color: black;
      --custom-var: 10px;
    }
`;

exports[`CssFormatter > formats inherited transition and animation styles with parent node toJSON 1`] = `
{
  "element": {
    "uid": "child-elem",
    "selector": "button"
  },
  "rules": [
    {
      "type": "inherited",
      "node": {
        "selector": "div#wrapper"
      },
      "selector": "transitions style",
      "properties": [
        {
          "name": "color",
          "value": "purple",
          "status": "active"
        }
      ]
    },
    {
      "type": "inherited",
      "node": {
        "selector": "div#wrapper"
      },
      "selector": "pulse animation",
      "properties": [
        {
          "name": "color",
          "value": "orange",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats inherited transition and animation styles with parent node toString 1`] = `
Styles for button (uid: "child-elem"):

  Inherited from div#wrapper:
    transitions style {
      color: purple;
    }

  Inherited from div#wrapper:
    pulse animation {
      color: orange;
    }
`;

exports[`CssFormatter > formats injected stylesheet rules toJSON 1`] = `
{
  "element": {
    "uid": "elem-injected",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".extension-override",
      "source": "injected stylesheet",
      "properties": [
        {
          "name": "display",
          "value": "none",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats injected stylesheet rules toString 1`] = `
Styles for button (uid: "elem-injected"):

  .extension-override (injected stylesheet) {
    display: none;
  }
`;

exports[`CssFormatter > formats inline styles with active and overloaded properties toJSON 1`] = `
{
  "element": {
    "uid": "1_2",
    "selector": "button"
  },
  "rules": [
    {
      "type": "inline",
      "selector": "element.style",
      "properties": [
        {
          "name": "color",
          "value": "red",
          "status": "overloaded"
        },
        {
          "name": "font-size",
          "value": "14px",
          "status": "active",
          "important": true
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats inline styles with active and overloaded properties toString 1`] = `
Styles for button (uid: "1_2"):

  element.style {
    [overloaded] color: red;
    font-size: 14px !important;
  }
`;

exports[`CssFormatter > formats inspector stylesheet rules toJSON 1`] = `
{
  "element": {
    "uid": "elem-inspector",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": "#interactive-test",
      "source": "via inspector",
      "properties": [
        {
          "name": "outline",
          "value": "2px solid red",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats inspector stylesheet rules toString 1`] = `
Styles for button (uid: "elem-inspector"):

  #interactive-test (via inspector) {
    outline: 2px solid red;
  }
`;

exports[`CssFormatter > formats mixed inline and matched rules toJSON 1`] = `
{
  "element": {
    "uid": "1_1",
    "selector": "button#btn-id"
  },
  "rules": [
    {
      "type": "inline",
      "selector": "element.style",
      "properties": [
        {
          "name": "color",
          "value": "red",
          "status": "active"
        }
      ]
    },
    {
      "type": "matched",
      "selector": ".btn",
      "source": "style.css:6",
      "properties": [
        {
          "name": "font-size",
          "value": "16px",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats mixed inline and matched rules toString 1`] = `
Styles for button#btn-id (uid: "1_1"):

  element.style {
    color: red;
  }

  .btn (style.css:6) {
    font-size: 16px;
  }
`;

exports[`CssFormatter > formats nested CSS rules with nesting ancestors toJSON 1`] = `
{
  "element": {
    "uid": "elem-child",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": "& .child",
      "ancestors": [
        {
          "type": "nesting",
          "selector": ".card"
        }
      ],
      "source": "styles.css:16",
      "properties": [
        {
          "name": "color",
          "value": "blue",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats nested CSS rules with nesting ancestors toString 1`] = `
Styles for button (uid: "elem-child"):

  .card {
    & .child (styles.css:16) {
      color: blue;
    }
  }
`;

exports[`CssFormatter > formats pseudo-elements with rules and inline pseudo styles toJSON 1`] = `
{
  "element": {
    "uid": "btn-pseudo",
    "selector": "button"
  },
  "rules": [
    {
      "type": "pseudo",
      "pseudoType": "::before",
      "selector": "button.btn::before",
      "ancestors": [
        {
          "type": "nesting",
          "selector": ".btn-group"
        }
      ],
      "matchingSelectors": [
        "button.btn::before"
      ],
      "source": "styles.css:21",
      "properties": [
        {
          "name": "content",
          "value": "\\"→\\"",
          "status": "active"
        },
        {
          "name": "color",
          "value": "blue",
          "status": "active"
        }
      ]
    },
    {
      "type": "pseudo",
      "pseudoType": "::after",
      "properties": [
        {
          "name": "content",
          "value": "\\"*\\"",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats pseudo-elements with rules and inline pseudo styles toString 1`] = `
Styles for button (uid: "btn-pseudo"):

  /* Pseudo ::before element */
  .btn-group {
    button.btn::before (styles.css:21) {
      content: "→";
      color: blue;
    }
  }

  /* Pseudo ::after element */
  ::after {
    content: "*";
  }
`;

exports[`CssFormatter > formats transition, animation, and attributes styles toJSON 1`] = `
{
  "element": {
    "uid": "table-1",
    "selector": "table#data"
  },
  "rules": [
    {
      "type": "transition",
      "selector": "transitions style",
      "properties": [
        {
          "name": "opacity",
          "value": "1",
          "status": "active"
        }
      ]
    },
    {
      "type": "animation",
      "name": "pulse",
      "selector": "pulse animation",
      "properties": [
        {
          "name": "transform",
          "value": "scale(1.2)",
          "status": "active"
        }
      ]
    },
    {
      "type": "attributes",
      "selector": "table[attributes style]",
      "properties": [
        {
          "name": "border",
          "value": "1px",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > formats transition, animation, and attributes styles toString 1`] = `
Styles for table#data (uid: "table-1"):

  transitions style {
    opacity: 1;
  }

  pulse animation {
    transform: scale(1.2);
  }

  table[attributes style] {
    border: 1px;
  }
`;

exports[`CssFormatter > maps invalid and disabled property statuses toJSON 1`] = `
{
  "element": {
    "uid": "elem-diag",
    "selector": "button"
  },
  "rules": [
    {
      "type": "inline",
      "selector": "element.style",
      "properties": [
        {
          "name": "color",
          "value": "red",
          "status": "active"
        },
        {
          "name": "background",
          "value": "invalid-val",
          "status": "invalid"
        },
        {
          "name": "opacity",
          "value": "0.5",
          "status": "disabled"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > maps invalid and disabled property statuses toString 1`] = `
Styles for button (uid: "elem-diag"):

  element.style {
    color: red;
    [invalid] background: invalid-val;
    [disabled] opacity: 0.5;
  }
`;

exports[`CssFormatter > resolves container queries with node uid toJSON 1`] = `
{
  "element": {
    "uid": "elem-widget",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".widget",
      "ancestors": [
        {
          "type": "container",
          "query": "(min-width: 300px)",
          "name": "sidebar-cq",
          "container": {
            "uid": "uid-42",
            "selector": "aside#sidebar"
          }
        }
      ],
      "source": "<style>",
      "properties": [
        {
          "name": "padding",
          "value": "10px",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > resolves container queries with node uid toString 1`] = `
Styles for button (uid: "elem-widget"):

  /* container: aside#sidebar (uid: "uid-42") */
  @container sidebar-cq (min-width: 300px) {
    .widget (<style>) {
      padding: 10px;
    }
  }
`;

exports[`CssFormatter > rule subsets > matched rules all 3 rules toJSON 1`] = `
{
  "element": {
    "uid": "btn-1",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".rule-1",
      "source": "app.css:11",
      "properties": [
        {
          "name": "color",
          "value": "red",
          "status": "active"
        }
      ]
    },
    {
      "type": "matched",
      "selector": ".rule-2",
      "source": "app.css:21",
      "properties": [
        {
          "name": "color",
          "value": "blue",
          "status": "active"
        }
      ]
    },
    {
      "type": "matched",
      "selector": ".rule-3",
      "source": "app.css:31",
      "properties": [
        {
          "name": "color",
          "value": "green",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > rule subsets > matched rules all 3 rules toString 1`] = `
Styles for button (uid: "btn-1"):

  .rule-1 (app.css:11) {
    color: red;
  }

  .rule-2 (app.css:21) {
    color: blue;
  }

  .rule-3 (app.css:31) {
    color: green;
  }
`;

exports[`CssFormatter > rule subsets > matched rules subset - last rule toJSON 1`] = `
{
  "element": {
    "uid": "btn-1",
    "selector": "button"
  },
  "rules": [
    {
      "type": "matched",
      "selector": ".rule-3",
      "source": "app.css:31",
      "properties": [
        {
          "name": "color",
          "value": "green",
          "status": "active"
        }
      ]
    }
  ]
}
`;

exports[`CssFormatter > rule subsets > matched rules subset - last rule toString 1`] = `
Styles for button (uid: "btn-1"):

  .rule-3 (app.css:31) {
    color: green;
  }
`;
